Changing connection string

--- a/MyLittleProjectManager/MyLittleProjectManager/appsettings.json
+++ b/MyLittleProjectManager/MyLittleProjectManager/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MyLittleProjectManager-6541A26F-4ABA-49F5-AA28-82BA25DD4D32;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MyLittleProjectManager-6541A26F-4ABA-49F5-AA28-82BA25DD4D32;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=tcp:myliproma.database.windows.net,1433;Initial Catalog=MyLiProMa;User Id=MyLiProMa@myliproma.database.windows.net;Password=P@ssw0rd;"
   },
   "Logging": {
     "IncludeScopes": false,
