--- a/MyLittleProjectManager/MyLittleProjectManager/MyLittleProjectManager.csproj
+++ b/MyLittleProjectManager/MyLittleProjectManager/MyLittleProjectManager.csproj
@@ -5,6 +5,13 @@
     <UserSecretsId>aspnet-MyLittleProjectManager-6541A26F-4ABA-49F5-AA28-82BA25DD4D32</UserSecretsId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Images\**" />
+    <Content Remove="Images\**" />
+    <EmbeddedResource Remove="Images\**" />
+    <None Remove="Images\**" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
